自建计数服务，取消显示阅读时长
估算阅读时长的算法一点都不科学

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -15,7 +15,7 @@
 
   <span> 网站已有 </span>
   <img
-    src="https://count.getloli.com/@MoeCounter?name=MoeCounter&theme=original-new&padding=5&offset=0&align=center&scale=0.5&pixelated=1&darkmode=auto"
+    src="http://ficn-moecounter.glitch.me/@MoeCounter?name=MoeCounter&theme=original-new&padding=5&offset=0&align=center&scale=0.5&pixelated=1&darkmode=auto"
     class="counter"
   />
   <span>次访问啦</span>
