--- a/assets/css/common/footer_home.css
+++ b/assets/css/common/footer_home.css
@@ -1,4 +1,4 @@
-.footer,
+.footer_h,
 .top-link {
   font-size: 18px;
   color: var(--secondary);
@@ -12,23 +12,23 @@
   line-height: 24px;
 } */
 
-.footer span {
+.footer_h span {
   margin-inline-start: 1px;
   margin-inline-end: 1px;
   display: flex;
   justify-content: center; /* 内容居中 */
 }
 
-.footer span:last-child {
+.footer_h span:last-child {
   white-space: nowrap;
 }
 
-.footer a {
+.footer_h a {
   color: inherit;
   border-bottom: 1px solid var(--secondary);
 }
 
-.footer a:hover {
+.footer_h a:hover {
   border-bottom: 1px solid var(--primary);
 }
 
@@ -46,7 +46,7 @@
   transition: visibility 0.5s, opacity 0.8s linear;
 }
 
-.top-link,
+/* .top-link,
 .top-link svg {
   filter: drop-shadow(0px 0px 0px var(--theme));
 }
@@ -59,9 +59,9 @@
 .top-link:focus,
 #theme-toggle:focus {
   outline: 0;
-}
+} */
 
-.footer {
+.footer_h {
   display: flex;
   justify-content: flex-end; /* 或 flex-end */
   align-items: center;
