--- a/layouts/partials/mathjax.html
+++ b/layouts/partials/mathjax.html
@@ -18,6 +18,6 @@
 <script
   id="MathJax-script"
   async
-  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
+  src="https://gcore.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
 ></script>
 {{ end }}
