修复计数器
Glitch被停，临时改用官方提供的计数器；文章更新

--- a/layouts/partials/footer_home.html
+++ b/layouts/partials/footer_home.html
@@ -14,7 +14,7 @@
     {{- end }} -->
   <span> 网站已有 </span>
   <img
-    src="http://ficn-moecounter.glitch.me/@MoeCounter?name=MoeCounter&theme=original-new&padding=5&offset=0&align=center&scale=0.5&pixelated=1&darkmode=auto"
+    src="https://count.getloli.com/@ficn-blog?name=ficn-blog&theme=original-new&padding=5&offset=0&align=center&scale=0.5&pixelated=1&darkmode=auto"
     class="counter"
   />
   <span>次访问啦</span>
